Adds a title and makes the stripping regex more explict

--- a/resources/templates/index.html
+++ b/resources/templates/index.html
@@ -2,6 +2,8 @@
 
 <html>
 	<head>
+		<title>Guardian book reviews</title>
+		
 		<link href='http://fonts.googleapis.com/css?family=News+Cycle|Lato|Marcellus' rel='stylesheet' type='text/css'>
 
 		<link rel="stylesheet" href="/static/css/typeplate-unminified.css"/>
