--- a/resources/templates/index.html
+++ b/resources/templates/index.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<title>Guardian book reviews</title>
-		
+
 		<link href='http://fonts.googleapis.com/css?family=News+Cycle|Lato|Marcellus' rel='stylesheet' type='text/css'>
 
 		<link rel="stylesheet" href="/static/css/typeplate-unminified.css"/>
@@ -17,6 +17,7 @@
 				{{#reviews}}
 				<li class="review">
 					<header><h1 class="review-heading gamma">{{{strippedTitle}}}</h1></header>
+					{{#author}}<p class="review-book-author">{{author}} <a class="review-author-search-link" href="http://google.com/search?q={{author}}">search</a></p>{{/author}}
 					<div class="review-standfirst">{{#fields}}{{{standfirst}}}{{/fields}}<br><span class="review-link">Link: <a href="{{webUrl}}">{{webTitle}}</a></span></div>
 				</li>
 				{{/reviews}}
