Unescape the web title in the link text

--- a/resources/templates/index.html
+++ b/resources/templates/index.html
@@ -18,7 +18,7 @@
 				<li class="review">
 					<header><h1 class="review-heading gamma">{{{strippedTitle}}}</h1></header>
 					{{#author}}<p class="review-book-author">{{author}} <a class="review-author-search-link" href="http://google.com/search?q={{author}}">search</a></p>{{/author}}
-					<div class="review-standfirst">{{#fields}}{{{standfirst}}}{{/fields}}<br><span class="review-link">Link: <a href="{{webUrl}}">{{webTitle}}</a></span></div>
+					<div class="review-standfirst">{{#fields}}{{{standfirst}}}{{/fields}}<br><span class="review-link">Link: <a href="{{webUrl}}">{{{webTitle}}}</a></span></div>
 				</li>
 				{{/reviews}}
 			</ul>
